--- a/app/src/main/res/layout/activity_cash.xml
+++ b/app/src/main/res/layout/activity_cash.xml
@@ -4,46 +4,31 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/back3"
     tools:context=".cash">
 
     <ImageView
         android:id="@+id/backcah"
-        android:layout_width="364dp"
-        android:layout_height="131dp"
-        android:layout_marginStart="46dp"
-        android:layout_marginTop="74dp"
-        android:layout_marginEnd="1dp"
-        android:layout_marginBottom="526dp"
+        android:layout_width="402dp"
+        android:layout_height="144dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="90dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginBottom="498dp"
         android:src="@drawable/car"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"></ImageView>
 
-    <ImageView
-        android:id="@+id/back"
-        android:layout_width="374dp"
-        android:layout_height="644dp"
-        android:layout_marginStart="11dp"
-        android:layout_marginTop="3dp"
-        android:layout_marginEnd="11dp"
-        android:layout_marginBottom="11dp"
-        android:src="@drawable/pay"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.666"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.7"></ImageView>
-
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="73dp"
-        android:layout_marginTop="182dp"
-        android:layout_marginEnd="126dp"
-        android:layout_marginBottom="563dp"
+        android:layout_marginStart="66dp"
+        android:layout_marginTop="180dp"
+        android:layout_marginEnd="152dp"
+        android:layout_marginBottom="511dp"
         android:text="@string/cash"
         android:textColor="@android:color/background_dark"
         android:textSize="30sp"
