--- a/app/src/main/res/layout/activity_searchpayment.xml
+++ b/app/src/main/res/layout/activity_searchpayment.xml
@@ -4,33 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:drawable/editbox_dropdown_light_frame"
+    android:background="@drawable/back3"
     tools:context=".searchpayment">
+
 
     <ImageView
         android:id="@+id/back"
-        android:layout_width="364dp"
-        android:layout_height="131dp"
-        android:layout_marginStart="46dp"
-        android:layout_marginTop="74dp"
+        android:layout_width="410dp"
+        android:layout_height="151dp"
+        android:layout_marginTop="107dp"
         android:layout_marginEnd="1dp"
-        android:layout_marginBottom="526dp"
+        android:layout_marginBottom="473dp"
         android:src="@drawable/car"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"></ImageView>
-
-
-    <ImageView
-        android:id="@+id/search"
-        android:layout_width="374dp"
-        android:layout_height="644dp"
-        android:layout_marginStart="22dp"
-        android:layout_marginTop="83dp"
-        android:layout_marginEnd="15dp"
-        android:layout_marginBottom="4dp"
-        android:src="@drawable/search"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -38,12 +23,12 @@
 
     <TextView
         android:id="@+id/textView20"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="63dp"
-        android:layout_marginTop="154dp"
-        android:layout_marginEnd="132dp"
-        android:layout_marginBottom="537dp"
+        android:layout_width="235dp"
+        android:layout_height="44dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="206dp"
+        android:layout_marginEnd="136dp"
+        android:layout_marginBottom="481dp"
         android:text="Search payment"
         android:textColor="@android:color/background_dark"
         android:textSize="30sp"
@@ -57,9 +42,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
-        android:layout_marginTop="275dp"
+        android:layout_marginTop="344dp"
         android:layout_marginEnd="259dp"
-        android:layout_marginBottom="432dp"
+        android:layout_marginBottom="363dp"
         android:text="@string/NIC"
         android:textColor="@android:color/background_dark"
         android:textSize="18sp"
@@ -68,48 +53,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/textView22"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="376dp"
-        android:layout_marginEnd="269dp"
-        android:layout_marginBottom="331dp"
-        android:text="@string/date"
-        android:textColor="@android:color/background_dark"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <EditText
-        android:id="@+id/editTextTextPersonName"
+        android:id="@+id/txtNIC"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="185dp"
-        android:layout_marginTop="254dp"
+        android:layout_marginTop="323dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="432dp"
+        android:layout_marginBottom="363dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:textColor="@android:color/background_dark"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <EditText
-        android:id="@+id/editTextDate"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="185dp"
-        android:layout_marginTop="355dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="331dp"
-        android:ems="10"
-        android:inputType="date"
         android:textColor="@android:color/background_dark"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -120,10 +73,10 @@
         android:id="@+id/find"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="162dp"
-        android:layout_marginTop="452dp"
-        android:layout_marginEnd="161dp"
-        android:layout_marginBottom="231dp"
+        android:layout_marginStart="152dp"
+        android:layout_marginTop="472dp"
+        android:layout_marginEnd="171dp"
+        android:layout_marginBottom="211dp"
         android:text="find"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
