--- a/app/src/main/res/layout/activity_credit.xml
+++ b/app/src/main/res/layout/activity_credit.xml
@@ -39,22 +39,6 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="58dp"
-        android:layout_marginTop="223dp"
-        android:layout_marginEnd="273dp"
-        android:layout_marginBottom="484dp"
-        android:text="@string/vehical"
-        android:textColor="@android:color/background_dark"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
         android:id="@+id/textView8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -127,22 +111,6 @@
         android:layout_marginEnd="253dp"
         android:layout_marginBottom="207dp"
         android:text="@string/cvv"
-        android:textColor="@android:color/background_dark"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/Vehicleid"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="258dp"
-        android:layout_marginTop="223dp"
-        android:layout_marginEnd="81dp"
-        android:layout_marginBottom="484dp"
-        android:text="TextView"
         android:textColor="@android:color/background_dark"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -238,6 +206,20 @@
         android:layout_marginBottom="251dp"
         android:ems="10"
         android:inputType="number"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="371dp"
+        android:layout_height="37dp"
+        android:layout_marginStart="26dp"
+        android:layout_marginTop="222dp"
+        android:layout_marginEnd="14dp"
+        android:layout_marginBottom="472dp"
+        android:text="Please note that when paying using card payment you have to pay 5% exta amount for tax"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
