--- a/app/src/main/res/layout/activity_allpayment.xml
+++ b/app/src/main/res/layout/activity_allpayment.xml
@@ -73,10 +73,12 @@
         android:layout_height="41dp"
         android:layout_marginStart="26dp"
         android:layout_marginTop="282dp"
+        android:layout_marginEnd="323dp"
         android:layout_marginBottom="408dp"
         android:text="@string/NIC"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
