--- a/app/src/main/res/layout/list_payment.xml
+++ b/app/src/main/res/layout/list_payment.xml
@@ -10,35 +10,35 @@
     <TextView
         android:id="@+id/txtNic"
         android:layout_width="wrap_content"
-        android:layout_height="67dp"
+        android:layout_height="wrap_content"
         android:padding="5dp"
         android:text="TextView" />
 
     <TextView
         android:id="@+id/txtdate"
         android:layout_width="wrap_content"
-        android:layout_height="65dp"
+        android:layout_height="wrap_content"
         android:padding="5dp"
         android:text="TextView" />
 
     <TextView
         android:id="@+id/txtamount"
-        android:layout_width="wrap_content"
-        android:layout_height="64dp"
+        android:layout_width="70dp"
+        android:layout_height="wrap_content"
         android:padding="5dp"
         android:text="TextView" />
 
     <TextView
         android:id="@+id/txtpaysate"
-        android:layout_width="wrap_content"
-        android:layout_height="86dp"
-        android:padding="10dp"
+        android:layout_width="70dp"
+        android:layout_height="wrap_content"
+        android:padding="5dp"
         android:text="TextView" />
 
     <TextView
         android:id="@+id/txtpaymethod"
         android:layout_width="wrap_content"
-        android:layout_height="59dp"
+        android:layout_height="wrap_content"
         android:padding="5dp"
         android:text="TextView" />
 </LinearLayout>
